<?xml version="1.0"?>
<package format="2">
  <name>myrobot_description</name>
  <version>0.0.1</version>
  <description>robot_description package</description>

  <maintainer email="jspark2090@kimm.re.kr">Jinseong Park</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>  

  <export>
  </export>
</package>
